NewsSite/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
  color: var(--bs-secondary-color);
  text-align: end;
}

.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
  text-align: start;
}
@media (max-width: 767.98px) {
    .custom-mobile-table thead {
        display: none;
    }

    .custom-mobile-table tbody tr {
        display: block;
        border-bottom: 2px solid #dee2e6;
        margin-bottom: 10px;
        padding-bottom: 10px;
    }

    .custom-mobile-table tbody td {
        display: flex;
        justify-content: space-between;
        align-items: center;
        border-bottom: 1px solid #f8f9fa;
        padding: 0.5rem 0.5rem;
        text-align: right;
    }

        .custom-mobile-table tbody td::before {
            content: attr(data-label);
            font-weight: 600;
            text-transform: uppercase;
            font-size: 0.8em;
            color: #6c757d;
            margin-right: 15px;
            text-align: left;
        }

        .custom-mobile-table tbody td:last-child {
            border-bottom: 0;
            justify-content: flex-end;
            margin-top: 10px;
        }

            .custom-mobile-table tbody td:last-child::before {
                display: none;
            }
}

